--- a/pom.xml
+++ b/pom.xml
@@ -2,36 +2,74 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <packaging>pom</packaging>
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.6.7</version>
-        <relativePath/> <!-- lookup parent from repository -->
     </parent>
+
+    <!-- 父级项目配置信息 -->
     <groupId>com.keepgrown</groupId>
     <artifactId>dashu-frame</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>${dashu-frame.version}</version>
     <name>dashu-frame</name>
-    <description>Demo project for Spring Boot</description>
+    <description>大树快速开发平台</description>
+
+    <!-- 子模块 -->
+    <modules>
+        <module>core</module>
+        <module>component</module>
+        <module>module</module>
+        <module>web-vue2</module>
+    </modules>
+
+    <!-- 依赖版本控制 -->
     <properties>
+        <dashu-frame.version>1.0.1-SNAPSHOT</dashu-frame.version>
         <java.version>1.8</java.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.resources.sourceEncoding>UTF-8</project.resources.sourceEncoding>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
+
+        <lombok.version>1.18.24</lombok.version>
+        <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
+
+        <mybatis-plus.version>3.4.2</mybatis-plus.version>
+        <spring-boot.version>2.6.7</spring-boot.version>
     </properties>
-    <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <!--security-->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <optional>true</optional>
-        </dependency>
-    </dependencies>
+
+    <!-- 依赖Jar包控制 -->
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.keepgrown</groupId>
+                <artifactId>core</artifactId>
+                <version>${dashu-frame.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.keepgrown</groupId>
+                <artifactId>component</artifactId>
+                <version>${dashu-frame.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-web</artifactId>
+            </dependency>
+            <!--security-->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-security</artifactId>
+                <version>${spring-boot.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${lombok.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <build>
         <plugins>
