Add: 增加测试接口；增加部分依赖（设计数据库完成）

--- a/module/src/main/resources/application.yml
+++ b/module/src/main/resources/application.yml
@@ -6,6 +6,6 @@ spring:
     type: com.zaxxer.hikari.HikariDataSource
     database:
       type: mysql
-    url: jdbc\:mysql\://39.107.157.91:13306/db_framework?serverTimezone\=Asia/Shanghai&useUnicode\=true&characterEncoding\=UTF-8
+    url: jdbc\:mysql\://39.107.157.91:13306/dashu_frame?serverTimezone\=Asia/Shanghai&useUnicode\=true&characterEncoding\=UTF-8
     username: root
     password: xxx666888
