--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <!-- 父级项目配置信息 -->
     <groupId>com.keepgrown</groupId>
     <artifactId>dashu-frame</artifactId>
-    <version>${dashu-frame.version}</version>
+    <version>1.0.1-SNAPSHOT</version>
     <name>dashu-frame</name>
     <description>大树快速开发平台</description>
 
@@ -56,17 +56,6 @@
                 <version>${dashu-frame.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-web</artifactId>
-                <version>${spring-boot.version}</version>
-            </dependency>
-            <!--security-->
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-security</artifactId>
-                <version>${spring-boot.version}</version>
-            </dependency>
-            <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
                 <version>${lombok.version}</version>
@@ -81,12 +70,6 @@
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
                 <version>${mysql.version}</version>
-            </dependency>
-            <!-- redis -->
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-data-redis</artifactId>
-                <version>${spring-boot.version}</version>
             </dependency>
             <!-- fastjson -->
             <dependency>
@@ -107,14 +90,5 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
 
 </project>
