Add: 增加swagger配置；增加mybatis plus代码生成器

--- a/module/src/main/resources/application.yml
+++ b/module/src/main/resources/application.yml
@@ -6,6 +6,17 @@ spring:
     type: com.zaxxer.hikari.HikariDataSource
     database:
       type: mysql
-    url: jdbc\:mysql\://39.107.157.91:13306/dashu_frame?serverTimezone\=Asia/Shanghai&useUnicode\=true&characterEncoding\=UTF-8
+    url: jdbc:mysql://39.107.157.91:13306/dashu_frame?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=UTF-8
     username: root
     password: xxx666888
+
+com:
+  kg:
+    swagger:
+      title: "大树快速开发平台API"
+      description: "基于swagger的Api接口信息"
+      termsOfServiceUrl: "http://www.keepgrown.com"
+      version: "1.0.0"
+      name: "ziro"
+      www: "http://www.keepgrown.com"
+      email: "877185959@qq.com"
