--- a/component/pom.xml
+++ b/component/pom.xml
@@ -12,4 +12,10 @@
     <artifactId>component</artifactId>
     <description>Component::组件库</description>
 
+    <dependencies>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-boot-starter</artifactId>
+        </dependency>
+    </dependencies>
 </project>
