--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
 
         <fastjson.version>1.2.76</fastjson.version>
         <hutool.version>5.8.0.M3</hutool.version>
-        <springfox.version>3.0.0</springfox.version>
+        <springfox.version>2.6.1</springfox.version>
     </properties>
 
     <!-- 依赖Jar包控制 -->
@@ -96,10 +96,10 @@
                 <artifactId>freemarker</artifactId>
                 <version>${freemarker.version}</version>
             </dependency>
-            <!-- swagger -->
+            <!-- swagger2 核心依赖 -->
             <dependency>
                 <groupId>io.springfox</groupId>
-                <artifactId>springfox-boot-starter</artifactId>
+                <artifactId>springfox-swagger2</artifactId>
                 <version>${springfox.version}</version>
             </dependency>
         </dependencies>
