--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
         <fastjson.version>1.2.76</fastjson.version>
         <hutool.version>5.8.0.M3</hutool.version>
         <springfox.version>2.6.1</springfox.version>
+        <mapstruct.version>1.4.1.Final</mapstruct.version>
     </properties>
 
     <!-- 依赖Jar包控制 -->
@@ -101,6 +102,17 @@
                 <groupId>io.springfox</groupId>
                 <artifactId>springfox-swagger2</artifactId>
                 <version>${springfox.version}</version>
+            </dependency>
+            <!-- entity和dto转换依赖 -->
+            <dependency>
+                <groupId>org.mapstruct</groupId>
+                <artifactId>mapstruct</artifactId>
+                <version>${mapstruct.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.mapstruct</groupId>
+                <artifactId>mapstruct-processor</artifactId>
+                <version>${mapstruct.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
