--- a/module/src/main/resources/application.yml
+++ b/module/src/main/resources/application.yml
@@ -26,8 +26,14 @@ mybatis-plus:
   type-aliases-package: com.kg.**.entity
 
 #自定义配置
+
 com:
   kg:
+    #文件上传配置
+    file:
+      allow-extend: jpg|jpeg|png|gif|bpm|
+      image-extend: jpg|jpeg|png|gif|bpm|
+      default-path-pre: /upload
     #swagger相关配置
     swagger:
       title: "大树快速开发平台API"
