--- a/module/src/main/resources/application.yml
+++ b/module/src/main/resources/application.yml
@@ -30,8 +30,8 @@ com:
   kg:
     #微信配置
     weixin:
-      appid: wxbead4f5df5f07c45
-      secret: 8a331d6e29f3109042592b612fb51209
+      appid: xxx
+      secret: xxx
       jscode-url: https://api.weixin.qq.com/sns/jscode2session
     #文件上传配置
     file:
