--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,7 @@ build/
 .vscode/
 
 # Maven
-target/
+**/target/
 pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
@@ -47,3 +47,4 @@ buildNumber.properties
 .mvn/timing.properties
 # Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
 !/.mvn/wrapper/maven-wrapper.jar
+/app-diancan/unpackage/
