--- a/component/pom.xml
+++ b/component/pom.xml
@@ -41,5 +41,11 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.baidubce</groupId>
+            <artifactId>api-explorer-sdk</artifactId>
+            <version>1.0.3.1</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
