Update: vue-element-admin部署打包配置

--- a/web-vue2/.env.production
+++ b/web-vue2/.env.production
@@ -2,7 +2,6 @@
 ENV = 'production'
 
 # base api
-VUE_APP_BASE_API = '/prod-api'
-
+VUE_APP_BASE_API = '//www.keepgrown.com/server'
 # base file/img
-VUE_APP_IMG = 'http://localhost:8123'
+VUE_APP_IMG = '//www.keepgrown.com/server'
